# aipha_0.3.1

./: .gitignore  README.md  aipha_lab.sublime-project.sublime-project  aipha_lab.sublime-project.sublime-workspace  docker-compose.yml  pyproject.toml
aipha/agents/base_agent/: agent.py
aipha/agents/data_fetching_agent/: agent.py
aipha/agents/tools/: data_processing_tool.py  data_query_tool.py  fetcher_tool.py
aipha/data_system/: api_client.py  fetchers.py  historical_data_processor.py
aipha/data_system/templates/: templates.py
aipha/trading_flow/: data_structures.py  signal_orchestrator.py
aipha/trading_flow/detectors/: accumulation_zone_detector.py  key_candle_detector.py  signal_combiner.py  signal_scorer.py  trend_detector.py
aipha/trading_flow/labelers/: potential_capture_engine.py
tests/agents/: test_base_agent.py
tests/data_system/: test_binance_vision_fetcher.py  test_data_fetching_agent.py  test_fetchers.py  test_historical_data_processor.py  test_templates.py
tests/trading_flow/: test_signal_orchestrator.py
tests/trading_flow/lebelers/: test_potential_capture_engine.py
