[tool.poetry]
name = "aipha"
version = "0.1.0"
description = "Sistema de trading algorítmico y análisis de datos basado en IA."
authors = ["Vaclav <arturcloe2084@gmail.com>"]
readme = "README.md"
packages = [{include = "aipha"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.8.2"
duckdb = "^1.0.0"
pandas-ta = "^0.3.14b0"
pandas = "^2.2.2"
setuptools = "^80.9.0"
numpy = "<2.0"  
scipy = "^1.16.1"
langchain = "^0.3.27"
langgraph = "^0.6.4"
langchain-google-genai = "^2.1.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.0"    # Versión añadida por poetry add
requests-mock = "^1.12.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marca las pruebas como pruebas de integración (lentas, requieren red)",
]
